--- a/index.html
+++ b/index.html
@@ -275,6 +275,13 @@
           <td>904-228-4629</td>
           <td>swati_koshal@yahoo.com / fb.com/swatikoshal18</td>
         </tr>
+        <tr>
+          <td>Anu Shah</td>
+          <td>Bollywood Dance Mania </td>
+          <td> calling kids ages 3 to adults of any age to come join Bollywood dance Mania’s Acting and Dancing lessons! We teach Bollywood, all folk dances like Bhangra Raas Ghoomar Lavani and so much more and fusion dance forms like Bolly Kathak and Bolly Natyam and Bolly Jazz and Bolly Hip hop! </td>
+          <td>585-802-2148</td>
+          <td>bdmjax@gmail.com</td>
+        </tr>
 			</tbody>
 		</table>
 	</section>
@@ -331,12 +338,13 @@
               <div class="block-38-img">
                 <div class="block-38-header">
                   <!-- MOVIE IMAGES -->
-                  <img src="images/person_2.jpg" alt="Image placeholder">
-                  <h1 >Badla</h1>
-                  <p class="block-38-subheading">Coming soon @ AMC Regency 24</p>
+                  <img src="images/person_3.jpg" alt="Image placeholder">
+                  <h1 >Kalank</h1>
+                  <p class="block-38-subheading">Now Playing @ AMC Regency 24</p>
                 </div>
+                <h4><span class="unit-3-icon icon fl-bigmug-line-clipboard68"> 10:55am, 2:35pm, 6:15pm, & 9:55pm</span></h4>
                 <div class="block-38-body">
-                  <p>A young married entrepreneur finds herself in a locked hotel room next to the body of her dead lover. Hoping to find answers, she hires a prestigious lawyer to help her solve the mystery of what really happened. </p>
+                  <p>Long-buried secrets come to light when romance blossoms between a young daredevil and a beautiful woman in 1945 India.</p>
                 </div>
               </div>
             </div>
