--- a/index.html
+++ b/index.html
@@ -367,6 +367,24 @@
         </div>
         <div class="row hosting">
 
+          <div class="col-md-6 col-lg-4 mb-5 mb-lg-4"> <!-- < data-aos="fade" data-aos-delay="100"> -->
+
+            <div class="unit-3 h-100 bg-white">
+
+              <div class="d-flex align-items-center mb-3 unit-3-heading">
+                <div class="unit-3-icon-wrap mr-4">
+                  <svg class="unit-3-svg" xmlns="http://www.w3.org/2000/svg" width="59px" height="68px">
+                    <path fill-rule="evenodd" stroke-width="2px" stroke-linecap="butt" stroke-linejoin="miter" fill="none" d="M29.000,66.000 L1.012,49.750 L1.012,17.250 L29.000,1.000 L56.988,17.250 L56.988,49.750 L29.000,66.000 Z"></path>
+                  </svg><span class="unit-3-icon icon fl-bigmug-line-clipboard68"></span>
+                </div>
+                <h2 class="h5"><a href="https://www.facebook.com/events/2424795980968743/" target=_blank>Indians In Jax Social Mixer for Singles and Young Couples</h2></a>
+              </div>
+              <div class="unit-3-body">
+                <p>Cinco De Mayo Celebration at Tacolu & Adventure Landing. Click for more info! </p>
+              </div>
+            </div>
+
+          </div>
 
           <div class="col-md-6 col-lg-4 mb-5 mb-lg-4"> <!-- < data-aos="fade" data-aos-delay="100"> -->
 
